week04/day1/lab1/manifests/monolith/monolith-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-monolith-nodeport
  namespace: ecommerce-advanced
spec:
  type: NodePort
  selector:
    app: ecommerce-monolith
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
